tests/programs/a1/local/valid/validCast.java
public class validCast {
    public validCast() {}

    public static int test() {
        int hello = 2;
        char[] abcdef = new char[5];
        int goodbye = (int) hello;
        goodbye = (validCast) hello;
        return 8;
    }
}